# rest-framework-generic-relations

./: Changelog.md  Makefile  README.md  pyproject.toml  testsettings.py  tox.ini
.github/workflows/: tests.yml
generic_relations/: relations.py
